k8s/adafruit.yaml
apiVersion: v1
kind: Service
metadata:
  name: adafruit-svc
  namespace: dadn
spec:
  type: ExternalName
  externalName: io.adafruit.com
  ports:
    - name: mqtts
      protocol: TCP
      port: 8883
      targetPort: 8883
