k8s/frontend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: dadn
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: dadn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: quangtuan9237/dadn-frontend
