k8s/server-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-svc
  namespace: dadn
spec:
  selector:
    app: server
  ports:
    - port: 4000
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  namespace: dadn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: quangtuan9237/dadn-server
